@@ -80,3 +80,18 @@ The following files are licensed under the following term:
     ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
     CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
     SOFTWARE.
+
+The following files released into the public domain.
+
+    The html/heart.*.png: 
+
+        The original SVG files by Bubinator.
+        http://commons.wikimedia.org/wiki/File:Love_Heart_SVG.svg
+
+    The copyright holder of this work, releases this work into the
+    public domain. This applies worldwide.  In some countries this may
+    not be legally possible; if so:
+
+    The copyright holder grants anyone the right to use this work for
+    any purpose, without any conditions, unless such conditions are
+    required by law.
